--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Yoga Hindu</string>
+    <string name="onboard_mssg">YOGMAYI meruapakan aplikasi pembelajaran Yoga Hindu yang dapat diakses dan digunakan di mana saja </string>
     <string name="materi1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pellentesque mi at elit malesuada scelerisque. \n\nMorbi et dui ac tellus pellentesque imperdiet sed semper arcu. Praesent et odio pulvinar, ultricies magna sed, auctor ipsum. Donec tempus id nisl vitae mattis. Duis convallis elit at justo maximus sagittis. Duis efficitur est leo, elementum auctor augue imperdiet a. \n\nQuisque justo ligula, blandit a erat sed, pharetra viverra ex. In sit amet tortor at lorem</string>
 </resources>
